<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="0dp" >

    <TextView
        android:id="@+id/wifi_ssid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:singleLine="true"

        android:ellipsize="end"
        android:text="hello"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/wifi_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/wifi_pwd_wrong"
        android:textColor="#FF8C00"
        android:textSize="15sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp" >

        <TextView
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="3dp"
            android:gravity="bottom"
            android:text="密码"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/search_panel"
            android:layout_width="match_parent"
            android:layout_height="46.6dp"
            android:paddingRight="10dp" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:focusableInTouchMode="true" >

                <CheckBox
                    android:id="@+id/ctv_checktext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/share_pwdcheck_selector"
                    android:button="@null"
                    android:checked="true" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/ctv_checktext"
                    android:background="@null"
                    android:focusable="true"
                    android:gravity="bottom"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/tab_textcolor_press" />
        </RelativeLayout>
    </LinearLayout>
    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="15dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/dialog_action_cancel"
            android:textColor="#909090"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/dialog_action_connect"
            android:textColor="#3f00dde5"
            android:textSize="18sp" />
    </LinearLayout>
    -->

    <RelativeLayout
        android:id="@+id/linearLayout_right"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp" >

        <ImageView
            android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="0.7dp"
            android:background="#ededed"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/center"
            android:layout_width="0.7dp"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:background="#3fededed" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/line2"
            android:layout_toLeftOf="@id/center"
            android:background="@drawable/button_gray_left"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/dialog_action_cancel"
            android:textColor="#909090"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_connect"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/line2"
            android:layout_toRightOf="@id/center"
            android:background="@drawable/button_green_right"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/dialog_action_connect"
            android:textColor="#3f00dde5"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>