<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_connected"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:gravity="center_vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/connectedview_bg"
        android:clickable="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical">

            <RelativeLayout
                android:layout_weight="1.0"
                android:layout_width="0.0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/image_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/wifi_linked_circle"
                    android:clickable="true"
                    android:padding="1dp"
                    android:src="@drawable/wifi_default_logo" />

                <ImageView
                    android:id="@+id/line"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/image_avatar"
                    android:scaleType="fitXY"
                    android:src="@drawable/wifi_linked_line"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/lay_disconnect"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:layout_toRightOf="@+id/line"
                    android:clickable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_wifi_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:gravity="center_vertical"
                            android:singleLine="true"
                            android:text=""
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/text_luyou_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:gravity="center_vertical"
                            android:singleLine="true"
                            android:text=""
                            android:textColor="#cfffffff"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <ProgressBar
                            android:id="@+id/connect_progress"
                            style="@style/LoadingProgressStyle"
                            android:layout_width="13dp"
                            android:layout_height="13dp"
                            android:layout_gravity="center_vertical"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/text_wifi_desc"
                            android:layout_width="fill_parent"
                            android:layout_height="20dp"
                            android:layout_marginLeft="5dp"
                            android:gravity="left|center_vertical"
                            android:singleLine="true"
                            android:text=""
                            android:textColor="#cfffffff"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progress"
                        style="@style/ProgressBar_Mini"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:progress="50"
                        android:visibility="invisible"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/image_extra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/image_avatar"
                    android:layout_alignRight="@id/image_avatar"
                    android:layout_marginRight="7.0dip" />

            </RelativeLayout>

            <com.haguapku.wificlient.view.WifiSignalView
                android:id="@+id/signalView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"/>

            <ImageView
                android:id="@+id/button_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.0"
                android:clickable="true"
                android:padding="5dp"
                android:src="@drawable/item_option_selector"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:gravity="center"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/wifi_login"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_login_bg"
                android:clickable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/wifi_action_login"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="-8dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/wifi_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:drawableTop="@drawable/draw_share_selector"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/wifi_action_share"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:scaleType="fitXY"
                android:src="@drawable/wifi_linked_line" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:scaleType="fitXY"
                android:src="@drawable/wifi_linked_line" />

            <TextView
                android:id="@+id/wifi_test"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:drawableTop="@drawable/draw_test_selector"
                android:gravity="center"
                android:padding="3dp"
                android:text="0KB/S"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:scaleType="fitXY"
                android:src="@drawable/wifi_linked_line" />

            <TextView
                android:id="@+id/wifi_speed"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableTop="@drawable/draw_pass_selector"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/wifi_action_pass"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/lay_showluncher"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#77ffffff"
            android:gravity="center"
            android:src="@drawable/pop_down"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/lay_etinfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/wifi_common_white_alpha"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="8dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/no_data_prompt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="3dp"
                android:text="@string/nearby_edit_prompt"
                android:textColor="@color/tab_textcolor_press"
                android:textSize="14.3sp" />

            <ImageView
                android:id="@+id/action_closeinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="6dp"
                android:clickable="true"
                android:src="@drawable/btn_close_selector" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>